# messaging-service

./: .gitignore  CLAUDE.md  Dockerfile  manage.py  pyproject.toml  railway.toml
apps/core/: admin.py  api_serializers.py  api_urls.py  api_views.py  apps.py  models.py  tasks.py  urls.py  views.py  views_telegram.py  webhook_urls.py
apps/core/management/commands/: setup_telegram_webhook.py  test_telegram.py
apps/core/middleware/: auth.py
apps/core/migrations/: 0001_initial.py  0002_telegram_chat_id.py  0003_contactprofile_contact_type.py
apps/core/services/: hub_callback.py  rate_limiter.py  state_machine.py  telegram_adapter.py  whatsapp_adapter.py
messaging_service/: celery.py  settings.py  settings_production.py  urls.py  wsgi.py
